adjusted padding in .main area

--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
 		}
 		.main .inner{
 			margin: 0 auto;
-			padding-bottom:55%;
-			font-size: 1.3em;
+			/*padding-bottom:55%;
+*/			font-size: 1.3em;
 		}	
 		@media screen and (min-width: 960px){
 			.main .inner{
@@ -380,11 +380,15 @@
 		.mainContent{
 			background-color: rgba(0,0,0,.7);
 			overflow: scroll;
-			height: 540px;
-			margin-top: 10%;
+			height: 560px;
+			margin-top: 2%;
+		}
+		@media screen and (min-width: 790px){
+			.mainContent{
+				margin-top: 10%;
+			}	
 		}
 		.mainContent p{
-			padding-bottom: 200%;
 		}
 /*************************************************MAIN*/	
 
