Add default.html and organized icons and images

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 		.hero .inner{
 			margin: 0 auto;
 			/*padding-bottom:48%;*/ /*uncomment this if .messageBoard and .heroContent is not included*/
-			background: url("risingSunHD.jpg");
+			background: url("images/risingSunHD.jpg");
 			background-size: 100% 100%;
 			display: flex;
 		}	
@@ -369,7 +369,7 @@
 		.main .inner{
 			margin: 0 auto;
 			/*padding-bottom:55%;
-*/			font-size: 1.3em;
+		*/	font-size: 1.3em;
 		}	
 		@media screen and (min-width: 960px){
 			.main .inner{
@@ -513,13 +513,13 @@
 		<div class="inner">
 			<div class="headerLogo">
 				<!-- <img src="https://pbs.twimg.com/profile_images/1598037847/Creative-Circle-Logo.png" alt=""> -->
-				<img src="logo.png" alt="">
+				<img src="images/logo.png" alt="">
 			</div>
 			<div class="headerContent">
 				<div class="title"><h2>Abunai MMA</h2></div>
 
 				<input id="toggle-menu" type="checkbox" />
-				<label for="toggle-menu" class="menu-on"><img class="icon" src="menuIcon.png" alt=""></label>
+				<label for="toggle-menu" class="menu-on"><img class="icon" src="icons/menuIcon.png" alt=""></label>
 				<label for="toggle-menu" class="menu-off"></label>
 				
 				<nav class="primary-nav">
@@ -533,9 +533,9 @@
 	</header>
 	<div class="hero">
 		<div class="inner">
-			<img class="figure" src="mmaGirlCroppedMod2.png" alt="">
+			<img class="figure" src="images/mmaGirlCroppedMod2.png" alt="">
 			<input id="toggle-messageBoard" type="checkbox" />
-			<label for="toggle-messageBoard" class="message-on"><img class="icon" src="messageIcon.png" alt=""></label>
+			<label for="toggle-messageBoard" class="message-on"><img class="icon" src="icons/messageIcon.png" alt=""></label>
 			<label for="toggle-messageBoard" class="message-off"></label>
 			
 			<aside class="messageBoard">
@@ -575,9 +575,9 @@
 	</div>	
 	<div class="selection-bar">
 		<div class="inner">
-			<div class="selection-box"><img src="mmaGirl01.jpg" alt=""></div>
-			<div class="selection-box"><img src="sparring01.jpg" alt=""></div>
-			<div class="selection-box"><img src="compete01.jpg" alt=""></div>
+			<div class="selection-box"><img src="images/mmaGirl01.jpg" alt=""></div>
+			<div class="selection-box"><img src="images/sparring01.jpg" alt=""></div>
+			<div class="selection-box"><img src="images/compete01.jpg" alt=""></div>
 		</div>
 	</div>
 	<div class="main">
@@ -628,25 +628,25 @@
 						<h5>FOLLOW US</h5>
 						<div class="iconSection">
 							<div class="iconContainer">
-								<img src="icon-facebook.png" alt="">
+								<img src="icons/icon-facebook.png" alt="">
 								<div class="iconTitle">
 									Facebook	
 								</div>
 							</div>	
 							<div class="iconContainer">
-								<img src="icon-youtube.png" alt="">
+								<img src="icons/icon-youtube.png" alt="">
 								<div class="iconTitle">
 									YouTube	
 								</div>
 							</div>	
 							<div class="iconContainer">
-								<img src="icon-twitter.png" alt="">
+								<img src="icons/icon-twitter.png" alt="">
 								<div class="iconTitle">
 									Twitter	
 								</div>
 							</div>	
 							<div class="iconContainer">
-								<img src="icon-instagram.png" alt="">
+								<img src="icons/icon-instagram.png" alt="">
 								<div class="iconTitle">
 									Instagram	
 								</div>
