added members page

--- a/default.html
+++ b/default.html
@@ -153,7 +153,9 @@
 /*MAIN************************************************/	
 
 		.main{
-			background-color: #d70100;
+			/*background-color: #d70100;*/
+			background: url("images/collageMod.jpg");
+			background-size: 100% auto;
 		}
 		.main .inner{
 			background-color: lightblue;
@@ -257,6 +259,7 @@
 		}
 		.address{
 			font-size: .8em;
+			color: #fff;
 		}
 		textarea{
 			margin-top: 4px;
