--- a/index.html
+++ b/index.html
@@ -523,10 +523,10 @@
 				<label for="toggle-menu" class="menu-off"></label>
 				
 				<nav class="primary-nav">
-					<a href="">Home</a>
-					<a href="">Members</a>
-					<a href="">About Us</a>
-					<a href="">Contact Us</a>
+					<a href="index.html">Home</a>
+					<a href="members.html">Members</a>
+					<a href="aboutus.html">About Us</a>
+					<a href="contactus.html">Contact Us</a>
 				</nav>
 			</div>
 		</div>
