--- a/default.html
+++ b/default.html
@@ -153,8 +153,7 @@
 /*MAIN************************************************/	
 
 		.main{
-			/*background-color: #d70100;*/
-			background: url("images/collageMod.jpg");
+			background-color: #d70100;
 			background-size: 100% auto;
 		}
 		.main .inner{
@@ -284,10 +283,10 @@
 				<label for="toggle-menu" class="menu-off"></label>
 				
 				<nav class="primary-nav">
-					<a href="">Home</a>
-					<a href="">Members</a>
-					<a href="">About Us</a>
-					<a href="">Contact Us</a>
+					<a href="index.html">Home</a>
+					<a href="members.html">Members</a>
+					<a href="aboutus.html">About Us</a>
+					<a href="contactus.html">Contact Us</a>
 				</nav>
 			</div>
 		</div>
