Change selection box design

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
 			height: 157.5px;
     		line-height: 280px;
     		z-index: 1003;
+    		opacity: .8;
 		}
 
 		.selection-box img{
@@ -353,8 +354,7 @@
 /*MAIN*************************************************/	
 
 		.main{
-			background-color: green;
-			background: url("collageMod.jpg");
+			background: url("images/collageMod.jpg");
 			background-size: 100% auto;
 			color: white;
 		}
@@ -369,7 +369,8 @@
 		.main .inner{
 			margin: 0 auto;
 			/*padding-bottom:55%;
-		*/	font-size: 1.3em;
+		*/	font-size: 1.1em;
+			font-weight: 100;
 		}	
 		@media screen and (min-width: 960px){
 			.main .inner{
@@ -378,9 +379,9 @@
 			}	
 		}	
 		.mainContent{
-			background-color: rgba(0,0,0,.7);
+			/*background-color: rgba(0,0,0,.7);*/
 			overflow: scroll;
-			height: 560px;
+			height: 600px;
 			margin-top: 2%;
 		}
 		@media screen and (min-width: 790px){
@@ -575,9 +576,9 @@
 	</div>	
 	<div class="selection-bar">
 		<div class="inner">
-			<div class="selection-box"><img src="images/mmaGirl01.jpg" alt=""></div>
-			<div class="selection-box"><img src="images/sparring01.jpg" alt=""></div>
-			<div class="selection-box"><img src="images/compete01.jpg" alt=""></div>
+			<div class="selection-box"><img src="images/grungeBackground1.jpg" alt=""></div>
+			<div class="selection-box"><img src="images/grungeBackground2.jpg" alt=""></div>
+			<div class="selection-box"><img src="images/grungeBackground3.jpg" alt=""></div>
 		</div>
 	</div>
 	<div class="main">
