Change color in messenger color to red

--- a/aboutus.html
+++ b/aboutus.html
@@ -153,11 +153,11 @@
 /*MAIN************************************************/	
 
 		.main{
-			background-color: #d70100;
+			background-color: #000;
 			background-size: 100% auto;
 		}
 		.main .inner{
-			background-color: lightblue;
+			background-color: #fff;
 			margin: 0 auto;
 			padding-bottom:55%;
 		}
@@ -167,6 +167,9 @@
 				height:540px;
 				padding-bottom:0%;
 			}	
+		}
+		h1 {
+			text-align: center;
 		}
 /*************************************************MAIN/	
 
@@ -294,7 +297,29 @@
 
 
 	<div class="main">
-		<div class="inner"></div>
+		<div class="inner">
+			<h1>About Us</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure magnam beatae laboriosam odio nostrum, rem est tenetur placeat, eum amet quos facere, eveniet sint quam soluta, quo molestiae! Fuga, aspernatur!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde cupiditate quis tenetur assumenda ab iste enim, incidunt. Laborum reiciendis in ratione pariatur? Suscipit vitae voluptatibus, facilis minus ipsa quam deleniti!
+			</p>			
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure magnam beatae laboriosam odio nostrum, rem est tenetur placeat, eum amet quos facere, eveniet sint quam soluta, quo molestiae! Fuga, aspernatur!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde cupiditate quis tenetur assumenda ab iste enim, incidunt. Laborum reiciendis in ratione pariatur? Suscipit vitae voluptatibus, facilis minus ipsa quam deleniti!
+			</p>			
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure magnam beatae laboriosam odio nostrum, rem est tenetur placeat, eum amet quos facere, eveniet sint quam soluta, quo molestiae! Fuga, aspernatur!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde cupiditate quis tenetur assumenda ab iste enim, incidunt. Laborum reiciendis in ratione pariatur? Suscipit vitae voluptatibus, facilis minus ipsa quam deleniti!
+			</p>			
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure magnam beatae laboriosam odio nostrum, rem est tenetur placeat, eum amet quos facere, eveniet sint quam soluta, quo molestiae! Fuga, aspernatur!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde cupiditate quis tenetur assumenda ab iste enim, incidunt. Laborum reiciendis in ratione pariatur? Suscipit vitae voluptatibus, facilis minus ipsa quam deleniti!
+			</p>			
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure magnam beatae laboriosam odio nostrum, rem est tenetur placeat, eum amet quos facere, eveniet sint quam soluta, quo molestiae! Fuga, aspernatur!
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde cupiditate quis tenetur assumenda ab iste enim, incidunt. Laborum reiciendis in ratione pariatur? Suscipit vitae voluptatibus, facilis minus ipsa quam deleniti!
+			</p>
+		</div>
 	</div> 
 	<footer class="primary-footer">
 		<div class="inner">
