--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
 		.messageContainer{
 			margin-top: 10px;
 		}
+		.messenger{
+			color: #d70100;
+		}
 /***********************************************Message/
 
 /*HERO*************************************************/
@@ -527,7 +530,7 @@
 					<a href="index.html">Home</a>
 					<a href="members.html">Members</a>
 					<a href="aboutus.html">About Us</a>
-					<a href="contactus.html">Contact Us</a>
+					<a href="competitions.html">Competitions</a>
 				</nav>
 			</div>
 		</div>
@@ -543,29 +546,33 @@
 				<div class="messages">
 					
 					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
-					</div>					
-					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
-					</div>					
-					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
-					</div>					
-					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
-					</div>					
-					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
-					</div>					
-					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
-					</div>					
-					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
 					</div>
 					<div class="messageContainer">
-						Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
 					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>
+					<div class="messageContainer">
+						<span class="messenger">Chris says:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.<br>
+					</div>					
+					
 				</div>
 			</aside>
 			<div class="heroContent">
