--- a/members.html
+++ b/members.html
@@ -344,7 +344,7 @@ td{
 					<a href="index.html">Home</a>
 					<a href="members.html">Members</a>
 					<a href="aboutus.html">About Us</a>
-					<a href="contactus.html">Contact Us</a>
+					<a href="competitions.html">Competitions</a>
 				</nav>
 			</div>
 		</div>
