--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
   			z-index: 1002;
   			display: none;
   	  		}
+  	  	aside.messageBoard::-webkit-scrollbar{
+			display: none;
+  	  	}
   		@media screen and (min-width: 600px){
 			aside.messageBoard {
 				width:300px;
@@ -360,9 +363,9 @@
 			background: url("images/collageMod.jpg");
 			background-size: 100% auto;
 			color: white;
+			/*text-align: justify;*/
 		}
 		.linearGradient{
-			/*position: absolute;*/
     		top: 0px;
    			z-index: 1;
    			width:100%;
@@ -371,8 +374,7 @@
 		}
 		.main .inner{
 			margin: 0 auto;
-			/*padding-bottom:55%;
-		*/	font-size: 1.1em;
+			font-size: 1.1em;
 			font-weight: 100;
 		}	
 		@media screen and (min-width: 960px){
@@ -381,8 +383,16 @@
 				padding-bottom:0%;
 			}	
 		}	
+		.mainContentTitle{
+			font-size: 2em;
+			color: red;
+		}
+		.mainContentimage{
+			float: right;
+			margin: 20px;
+			width: 50%;
+		}
 		.mainContent{
-			/*background-color: rgba(0,0,0,.7);*/
 			overflow: scroll;
 			height: 600px;
 			margin-top: 2%;
@@ -508,9 +518,32 @@
 			margin-top: 4px;
 		}
 
-/*************************************************FOOTER/	
+		.messages {
+		    overflow-y:auto; 
+		    overflow: hidden;
+		}
 
+/*************************************************FOOTER/	
+	
 	</style>
+	<script>
+		var amount = '';
+		function scroll() {
+		    $('.messages').animate({
+		        scrollTop: amount
+		    }, 100, 'linear',function() {
+		        if (amount != '') {
+		            scroll();
+		        }
+		    });
+		}
+		$('.messages').hover(function() {
+		    amount = '+=20';
+		    scroll();
+		}, function() {
+		    amount = '';
+		});
+	</script>
 </head>
 <body>
 	<header class="primary-header">
@@ -594,6 +627,8 @@
 		<div class="inner">
 			<div class="mainContent">
 				<p>
+				<h1 class="mainContentTitle">Our Mission</h1>
+				<img class="mainContentimage" src="images/dojo.jpg" alt="">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam accusamus, velit quia magnam aut labore provident numquam pariatur! Quam, eligendi voluptate quos perferendis sit accusamus hic molestiae temporibus! Repudiandae, ducimus.
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam accusamus, velit quia magnam aut labore provident numquam pariatur! Quam, eligendi voluptate quos perferendis sit accusamus hic molestiae temporibus! Repudiandae, ducimus.
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam accusamus, velit quia magnam aut labore provident numquam pariatur! Quam, eligendi voluptate quos perferendis sit accusamus hic molestiae temporibus! Repudiandae, ducimus.
@@ -677,3 +712,5 @@
 
 </body>
 </html>
+<!-- how to make scroll bar autotically go to top
+http://stackoverflow.com/questions/21947806/jquery-scroll-back-to-top-when-reach-bottom-on-hover -->
